--- a/bin/Nuget/MultiPlug.Ext.Thm.Default2016.nuspec
+++ b/bin/Nuget/MultiPlug.Ext.Thm.Default2016.nuspec
@@ -2,21 +2,22 @@
 <package >
   <metadata>
     <id>MultiPlug.Ext.Thm.Default2016</id>
-    <version>1.0.10</version>
+    <version>1.0.11</version>
     <title>MultiPlug 2016 Theme</title>
     <authors>British Systems</authors>
     <owners>British Systems</owners>
     <projectUrl>https://github.com/british-systems/MultiPlug.Ext.Thm.Default2016</projectUrl>
-    <iconUrl>https://raw.githubusercontent.com/british-systems/MultiPlug.Ext.Thm.Default2016/master/multiplug.ico</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/british-systems/MultiPlug.Ext.Thm.Default2016/master/media/multiplug.ico</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>2016 default theme for the MultiPlug .Net Edge Computing Platform</description>
-    <releaseNotes>1.0.10 Update to 'Layout' value
+    <releaseNotes>1.0.11 Rename of Name to Assembly
+1.0.10 Update to 'Layout' value
 1.0.9 Added Razor templates to RazorTemplates property call.
 1.0.8 Published</releaseNotes>
     <copyright>Great British Systems Ltd 2020</copyright>
     <tags>MultiPlug Edge_Computing IOT IIOT</tags>
     <dependencies>
-      <dependency id="MultiPlug.Core" version="2.2.57" />
+      <dependency id="MultiPlug.Core" version="2.2.60" />
     </dependencies>
   </metadata>
 </package>
