--- a/bin/Nuget/MultiPlug.Ext.Thm.Default2016.nuspec
+++ b/bin/Nuget/MultiPlug.Ext.Thm.Default2016.nuspec
@@ -2,24 +2,33 @@
 <package >
   <metadata>
     <id>MultiPlug.Ext.Thm.Default2016</id>
-    <version>1.0.13</version>
+    <version>1.0.14</version>
     <title>MultiPlug 2016 Theme</title>
     <authors>British Systems</authors>
     <owners>British Systems</owners>
     <projectUrl>https://github.com/british-systems/MultiPlug.Ext.Thm.Default2016</projectUrl>
-    <iconUrl>https://raw.githubusercontent.com/british-systems/MultiPlug.Ext.Thm.Default2016/master/media/multiplug.ico</iconUrl>
+    <icon>images\multiplugico.png</icon>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>2016 default theme for the MultiPlug .Net Edge Computing Platform</description>
-    <releaseNotes>1.0.13 Added Location in Environment
-	1.0.12 Typo
-	1.0.11 Rename of Name to Assembly
+    <releaseNotes>1.0.14 Compatible with MultiPlug.Core 2.2.68
+1.0.13 Added Location in Environment
+1.0.12 Typo
+1.0.11 Rename of Name to Assembly
 1.0.10 Update to 'Layout' value
 1.0.9 Added Razor templates to RazorTemplates property call.
 1.0.8 Published</releaseNotes>
-    <copyright>Great British Systems Ltd 2020</copyright>
+    <copyright>Great British Systems Ltd 2021</copyright>
     <tags>MultiPlug Edge_Computing IOT IIOT</tags>
     <dependencies>
-      <dependency id="MultiPlug.Core" version="2.2.67" />
+      <group targetFramework=".NETFramework4.7.2">
+        <dependency id="MultiPlug.Base" version="1.0.49" />
+        <dependency id="MultiPlug.Extension.Core" version="1.0.59" />
+        <dependency id="MultiPlug.Core" version="2.2.68" />
+      </group>
     </dependencies>
   </metadata>
+  <files>
+    <file src="images\multiplugico.png" target="images\" />
+    <file src="..\..\src\MultiPlug.Ext.Thm.Default2016\bin\Release\MultiPlug.Ext.Thm.Default2016.dll" target="lib\net472" />
+  </files>
 </package>
