--- a/bin/Nuget/MultiPlug.Ext.Thm.Default2016.nuspec
+++ b/bin/Nuget/MultiPlug.Ext.Thm.Default2016.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>MultiPlug.Ext.Thm.Default2016</id>
-    <version>1.0.14</version>
+    <version>1.0.15</version>
     <title>MultiPlug 2016 Theme</title>
     <authors>British Systems</authors>
     <owners>British Systems</owners>
@@ -10,7 +10,8 @@
     <icon>images\multiplugico.png</icon>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>2016 default theme for the MultiPlug .Net Edge Computing Platform</description>
-    <releaseNotes>1.0.14 Compatible with MultiPlug.Core 2.2.68
+    <releaseNotes>1.0.15 Uses new MultiPlugAPI.HttpEndpoints API found in MultiPlug.Base 1.0.51
+1.0.14 Compatible with MultiPlug.Core 2.2.68
 1.0.13 Added Location in Environment
 1.0.12 Typo
 1.0.11 Rename of Name to Assembly
@@ -21,7 +22,7 @@
     <tags>MultiPlug Edge_Computing IOT IIOT</tags>
     <dependencies>
       <group targetFramework=".NETFramework4.7.2">
-        <dependency id="MultiPlug.Base" version="1.0.49" />
+        <dependency id="MultiPlug.Base" version="1.0.51" />
         <dependency id="MultiPlug.Extension.Core" version="1.0.59" />
         <dependency id="MultiPlug.Core" version="2.2.68" />
       </group>
