--- a/src/MultiPlug.Ext.Thm.Default2016/MultiPlug.Ext.Thm.Default2016.csproj
+++ b/src/MultiPlug.Ext.Thm.Default2016/MultiPlug.Ext.Thm.Default2016.csproj
@@ -31,13 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MultiPlug.Base, Version=1.0.32.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\MultiPlug.Base.1.0.38\lib\net472\MultiPlug.Base.dll</HintPath>
+    <Reference Include="MultiPlug.Base, Version=1.0.51.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MultiPlug.Base.1.0.51\lib\net472\MultiPlug.Base.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="MultiPlug.Extension.Core, Version=1.0.46.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\MultiPlug.Extension.Core.1.0.52\lib\net472\MultiPlug.Extension.Core.dll</HintPath>
+    <Reference Include="MultiPlug.Extension.Core, Version=1.0.59.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MultiPlug.Extension.Core.1.0.59\lib\net472\MultiPlug.Extension.Core.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -216,9 +216,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Scripts\jstree.min.js" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Scripts\modernizr-jquery.min.js" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Scripts\multiplug.selectize.js" />
