--- a/bin/Nuget/MultiPlug.Ext.Thm.Default2016.nuspec
+++ b/bin/Nuget/MultiPlug.Ext.Thm.Default2016.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>MultiPlug.Ext.Thm.Default2016</id>
-    <version>1.0.17</version>
+    <version>1.0.18</version>
     <title>MultiPlug 2016 Theme</title>
     <authors>British Systems</authors>
     <owners>British Systems</owners>
@@ -10,7 +10,8 @@
     <icon>images\multiplugico.png</icon>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>2016 default theme for the MultiPlug .Net Edge Computing Platform</description>
-    <releaseNotes>1.0.17 Moved System log to the Analytics page
+    <releaseNotes>1.0.18 Copyright date change, Modal Bugs, minor fixes
+1.0.17 Moved System log to the Analytics page
 1.0.16 Add Analytics Stub
 1.0.15 Uses new MultiPlugAPI.HttpEndpoints API found in MultiPlug.Base 1.0.51
 1.0.14 Compatible with MultiPlug.Core 2.2.68
