--- a/src/MultiPlug.Ext.Thm.Default2016/MultiPlug.Ext.Thm.Default2016.csproj
+++ b/src/MultiPlug.Ext.Thm.Default2016/MultiPlug.Ext.Thm.Default2016.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Resources\Authentication.cshtml" />
     <None Include="Resources\Authorisation.cshtml" />
     <None Include="Resources\Fonts\59ZRklaO5bWGqF5A9baEERJtnKITppOI_IvcXXDNrsc.woff2" />
     <None Include="Resources\Fonts\cJZKeOuBrn4kERxqtaUH3VtXRa8TVwTICgirnJhmVJw.woff2" />
