--- a/src/MultiPlug.Ext.Thm.Default2016/MultiPlug.Ext.Thm.Default2016.csproj
+++ b/src/MultiPlug.Ext.Thm.Default2016/MultiPlug.Ext.Thm.Default2016.csproj
@@ -67,66 +67,30 @@
     <None Include="packages.config" />
     <None Include="Resources\Authentication.cshtml" />
     <None Include="Resources\Authorisation.cshtml" />
-    <None Include="Resources\Fonts\59ZRklaO5bWGqF5A9baEERJtnKITppOI_IvcXXDNrsc.woff2" />
-    <None Include="Resources\Fonts\cJZKeOuBrn4kERxqtaUH3VtXRa8TVwTICgirnJhmVJw.woff2" />
-    <None Include="Resources\Fonts\DXI1ORHCpsQm3Vp6mXoaTa-j2U0lmluP9RWlSytm3ho.woff2" />
-    <None Include="Resources\Fonts\DXI1ORHCpsQm3Vp6mXoaTaaRobkAwv3vxw3jMhVENGA.woff2" />
-    <None Include="Resources\Fonts\DXI1ORHCpsQm3Vp6mXoaTegdm0LZdjqr5-oayXSOefg.woff2" />
-    <None Include="Resources\Fonts\DXI1ORHCpsQm3Vp6mXoaTf8zf_FOSsgRmwsS7Aa9k2w.woff2" />
-    <None Include="Resources\Fonts\DXI1ORHCpsQm3Vp6mXoaTRWV49_lSm1NYrwo-zkhivY.woff2" />
-    <None Include="Resources\Fonts\DXI1ORHCpsQm3Vp6mXoaTT0LW-43aMEzIO6XUTLjad8.woff2" />
-    <None Include="Resources\Fonts\DXI1ORHCpsQm3Vp6mXoaTZX5f-9o1vgP2EXwfjgl7AY.woff2" />
     <None Include="Resources\Fonts\fontawesome-webfont.eot" />
     <None Include="Resources\Fonts\fontawesome-webfont.ttf" />
     <None Include="Resources\Fonts\fontawesome-webfont.woff" />
     <None Include="Resources\Fonts\FontAwesome.otf" />
-    <None Include="Resources\Fonts\k3k702ZOKiLJc3WVjuplzBWV49_lSm1NYrwo-zkhivY.woff2" />
-    <None Include="Resources\Fonts\k3k702ZOKiLJc3WVjuplzD0LW-43aMEzIO6XUTLjad8.woff2" />
-    <None Include="Resources\Fonts\k3k702ZOKiLJc3WVjuplzJX5f-9o1vgP2EXwfjgl7AY.woff2" />
-    <None Include="Resources\Fonts\k3k702ZOKiLJc3WVjuplzK-j2U0lmluP9RWlSytm3ho.woff2" />
-    <None Include="Resources\Fonts\k3k702ZOKiLJc3WVjuplzKaRobkAwv3vxw3jMhVENGA.woff2" />
-    <None Include="Resources\Fonts\k3k702ZOKiLJc3WVjuplzOgdm0LZdjqr5-oayXSOefg.woff2" />
-    <None Include="Resources\Fonts\k3k702ZOKiLJc3WVjuplzP8zf_FOSsgRmwsS7Aa9k2w.woff2" />
-    <None Include="Resources\Fonts\K88pR3goAWT7BTt32Z01mxJtnKITppOI_IvcXXDNrsc.woff2" />
-    <None Include="Resources\Fonts\LWCjsQkB6EMdfHrEVqA1KRJtnKITppOI_IvcXXDNrsc.woff2" />
-    <None Include="Resources\Fonts\MTP_ySUJH_bn48VBG8sNShWV49_lSm1NYrwo-zkhivY.woff2" />
-    <None Include="Resources\Fonts\MTP_ySUJH_bn48VBG8sNSj0LW-43aMEzIO6XUTLjad8.woff2" />
-    <None Include="Resources\Fonts\MTP_ySUJH_bn48VBG8sNSpX5f-9o1vgP2EXwfjgl7AY.woff2" />
-    <None Include="Resources\Fonts\MTP_ySUJH_bn48VBG8sNSq-j2U0lmluP9RWlSytm3ho.woff2" />
-    <None Include="Resources\Fonts\MTP_ySUJH_bn48VBG8sNSqaRobkAwv3vxw3jMhVENGA.woff2" />
-    <None Include="Resources\Fonts\MTP_ySUJH_bn48VBG8sNSugdm0LZdjqr5-oayXSOefg.woff2" />
-    <None Include="Resources\Fonts\MTP_ySUJH_bn48VBG8sNSv8zf_FOSsgRmwsS7Aa9k2w.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxgalQocB-__pDVGhF3uS2Ks.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxgyhumQnPMBCoGYhRaNxyyY.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxhgVThLs8Y7ETJzDCYFCSLE.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxhUVAXEdVvYDDqrz3aeR0Yc.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxiFaMxiho_5XQnyRZzQsrZs.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxi_vZmeiCMnoWNN9rHBYaTc.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxko2lTMeWA_kmIyWrkNCwPc.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxl2umOyRU7PgRiv8DXcgJjk.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxlf4y_3s5bcYyyLIFUSWYUU.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxmgpAmOCqD37_tyH_8Ri5MM.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxmhQUTDJGru-0vvUpABgH8I.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxnywqdtBbUHn3VPgzuFrCy8.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxolIZu-HDpmDIZMigmsroc4.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxp6iIh_FvlUHQwED9Yt5Kbw.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxpiMaisvaUVUsYyVzOmndek.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxqfJul7RR1X4poJgi27uS4w.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxqvyPXdneeGd26m9EmFSSWg.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxrBAWGjcah5Ky0jbCgIwDB8.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxsPNMTLbnS9uQzHQlYieHUU.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxujkDdvhIIFj_YMdgqpnSB0.woff2" />
-    <None Include="Resources\Fonts\PRmiXeptR36kaC0GEAetxv14vlcfyPYlAcQy2UfDRm4.woff2" />
-    <None Include="Resources\Fonts\RjgO7rYTmqiVp7vzi-Q5URJtnKITppOI_IvcXXDNrsc.woff2" />
-    <None Include="Resources\Fonts\u-WUoqrET9fUeobQW7jkRRJtnKITppOI_IvcXXDNrsc.woff2" />
-    <None Include="Resources\Fonts\xjAJXh38I15wypJXxuGMBiYE0-AqJ3nfInTTiDXDjU4.woff2" />
-    <None Include="Resources\Fonts\xjAJXh38I15wypJXxuGMBjTOQ_MqJVwkKsUn0wKzc2I.woff2" />
-    <None Include="Resources\Fonts\xjAJXh38I15wypJXxuGMBjUj_cnvWIuuBMVgbX098Mw.woff2" />
-    <None Include="Resources\Fonts\xjAJXh38I15wypJXxuGMBkbcKLIaa1LC45dFaAfauRA.woff2" />
-    <None Include="Resources\Fonts\xjAJXh38I15wypJXxuGMBmo_sUJ8uO4YLWRInS22T3Y.woff2" />
-    <None Include="Resources\Fonts\xjAJXh38I15wypJXxuGMBo4P5ICox8Kq3LLUNMylGO4.woff2" />
-    <None Include="Resources\Fonts\xjAJXh38I15wypJXxuGMBr6up8jxqWt8HVA3mDhkV_0.woff2" />
-    <None Include="Resources\Fonts\xozscpT2726on7jbcb_pAhJtnKITppOI_IvcXXDNrsc.woff2" />
+    <None Include="Resources\Fonts\memtYaGs126MiZpBA_UFUIcVXSCEkx2cmqvXlWqW106F15M.woff2" />
+    <None Include="Resources\Fonts\memtYaGs126MiZpBA_UFUIcVXSCEkx2cmqvXlWqWt06F15M.woff2" />
+    <None Include="Resources\Fonts\memtYaGs126MiZpBA_UFUIcVXSCEkx2cmqvXlWqWtE6F15M.woff2" />
+    <None Include="Resources\Fonts\memtYaGs126MiZpBA_UFUIcVXSCEkx2cmqvXlWqWtk6F15M.woff2" />
+    <None Include="Resources\Fonts\memtYaGs126MiZpBA_UFUIcVXSCEkx2cmqvXlWqWtU6F15M.woff2" />
+    <None Include="Resources\Fonts\memtYaGs126MiZpBA_UFUIcVXSCEkx2cmqvXlWqWu06F15M.woff2" />
+    <None Include="Resources\Fonts\memtYaGs126MiZpBA_UFUIcVXSCEkx2cmqvXlWqWuk6F15M.woff2" />
+    <None Include="Resources\Fonts\memtYaGs126MiZpBA_UFUIcVXSCEkx2cmqvXlWqWuU6F.woff2" />
+    <None Include="Resources\Fonts\memtYaGs126MiZpBA_UFUIcVXSCEkx2cmqvXlWqWvU6F15M.woff2" />
+    <None Include="Resources\Fonts\memtYaGs126MiZpBA_UFUIcVXSCEkx2cmqvXlWqWxU6F15M.woff2" />
+    <None Include="Resources\Fonts\memvYaGs126MiZpBA_UvWbX2vVnXBbObj2OVTS2mu1aB.woff2" />
+    <None Include="Resources\Fonts\memvYaGs126MiZpBA_UvWbX2vVnXBbObj2OVTSCmu1aB.woff2" />
+    <None Include="Resources\Fonts\memvYaGs126MiZpBA_UvWbX2vVnXBbObj2OVTSGmu1aB.woff2" />
+    <None Include="Resources\Fonts\memvYaGs126MiZpBA_UvWbX2vVnXBbObj2OVTSKmu1aB.woff2" />
+    <None Include="Resources\Fonts\memvYaGs126MiZpBA_UvWbX2vVnXBbObj2OVTSOmu1aB.woff2" />
+    <None Include="Resources\Fonts\memvYaGs126MiZpBA_UvWbX2vVnXBbObj2OVTSumu1aB.woff2" />
+    <None Include="Resources\Fonts\memvYaGs126MiZpBA_UvWbX2vVnXBbObj2OVTSymu1aB.woff2" />
+    <None Include="Resources\Fonts\memvYaGs126MiZpBA_UvWbX2vVnXBbObj2OVTS_muw.woff2" />
+    <None Include="Resources\Fonts\memvYaGs126MiZpBA_UvWbX2vVnXBbObj2OVTUGmu1aB.woff2" />
+    <None Include="Resources\Fonts\memvYaGs126MiZpBA_UvWbX2vVnXBbObj2OVTVOmu1aB.woff2" />
     <None Include="Resources\FrameApp.cshtml" />
     <None Include="Resources\FrameExtension.cshtml" />
     <None Include="Resources\HomeAnalytics.cshtml" />
@@ -202,9 +166,6 @@
     <None Include="Resources\Scripts\adminflare.min.js" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Scripts\adminflare-demo.min.js" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\Scripts\bootstrap.min.js" />
   </ItemGroup>
   <ItemGroup>
@@ -232,9 +193,6 @@
     <None Include="Resources\Styles\jstree.style.min.css" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Styles\pages.min.css" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\Styles\select2.min.css" />
   </ItemGroup>
   <ItemGroup>
@@ -244,13 +202,14 @@
     <Content Include="Resources\Fonts\fontawesome-webfont.svg" />
     <Content Include="Resources\Scripts\deploy.js" />
     <Content Include="Resources\Scripts\modernizr-2.6.2.js" />
+    <Content Include="Resources\Styles\bootstrap.min.css" />
     <Content Include="Resources\Styles\font.awesome.css" />
     <Content Include="Resources\Styles\fonts.css" />
+    <Content Include="Resources\Styles\pages.min.css" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>xcopy "$(ProjectDir)bin\$(ConfigurationName)\MultiPlug.Ext.Thm.Default2016.dll" "C:\projects\i4Core\Connector\MultiPlug.CLI\bin\Debug\extensions\MultiPlug.Ext.Thm.Default2016" /Y /I</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
